// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login> @Render should render "emailNotVerified" 1`] = `
<Container
  className="pt-5"
  fluid={false}
>
  <Row
    noGutters={false}
  >
    <EmailVerificationForm
      setPageState={[Function]}
    >
      <h3
        className="text-danger"
      >
        Could not sign you in
      </h3>
      <p>
        Your email address has not been confirmed. Please enter your email address below and a link will be sent to confirm your email address.
      </p>
    </EmailVerificationForm>
  </Row>
</Container>
`;

exports[`<Login> @Render should render "forgetMyPassword" 1`] = `
<Container
  className="pt-5"
  fluid={false}
>
  <Row
    noGutters={false}
  >
    <ForgotMyPasswordForm
      setPageState={[Function]}
    >
      <h3>
        Forgot my password
      </h3>
      <p>
        Enter your email address and we will send you a link to reset your password.
      </p>
    </ForgotMyPasswordForm>
  </Row>
</Container>
`;

exports[`<Login> @Render should render "login" 1`] = `
<Container
  className="pt-5"
  fluid={false}
>
  <Row
    noGutters={false}
  >
    <LoginForm
      setPageState={[Function]}
    />
  </Row>
</Container>
`;

exports[`<Login> @Render should render "success" 1`] = `
<Container
  className="pt-5"
  fluid={false}
>
  <Row
    noGutters={false}
  >
    <Col
      id="LoginSuccess"
    >
      <h3>
        Please check your email.
      </h3>
    </Col>
  </Row>
</Container>
`;
